web/api: add handlers to backup data as a zip archive or as a JSON
